--- a/bilie-service/pom.xml
+++ b/bilie-service/pom.xml
@@ -3,22 +3,19 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.lyk990</groupId>
+        <artifactId>bilieCodeFun</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
-    <groupId>org.lyk990</groupId>
-    <artifactId>bilieCodeFun</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <modules>
-        <module>bilie-api</module>
-        <module>bilie-service</module>
-        <module>bilie-dao</module>
-    </modules>
+    <groupId>org.example</groupId>
+    <artifactId>bilie-service</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
 
 </project>
