--- a/bilie-api/pom.xml
+++ b/bilie-api/pom.xml
@@ -12,6 +12,14 @@
     <groupId>org.example</groupId>
     <artifactId>bilie-api</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>bilie-service</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
