--- a/bilie-service/pom.xml
+++ b/bilie-service/pom.xml
@@ -12,6 +12,15 @@
     <groupId>org.example</groupId>
     <artifactId>bilie-service</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>bilie-dao</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
+
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
