--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,21 @@
     <artifactId>bilieCodeFun</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
+
+    <parent>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <groupId>org.springframework.boot</groupId>
+        <version>2.5.1</version>
+    </parent>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>2.5.1</version>
+        </dependency>
+    </dependencies>
+
     <modules>
         <module>bilie-api</module>
         <module>bilie-service</module>
