--- a/pom.xml
+++ b/pom.xml
@@ -28,8 +28,14 @@
             <version>8.0.26</version>
         </dependency>
 
-    </dependencies>
 
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>2.2.0</version>
+        </dependency>
+
+    </dependencies>
 
 
     <modules>
