--- a/bilie-service/src/main/resources/application.properties
+++ b/bilie-service/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.profiles.active=test
 
 #mybatis
 mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.type-aliases-package=com.imooc.bilibili.dao
