--- a/bilie-service/pom.xml
+++ b/bilie-service/pom.xml
@@ -18,6 +18,12 @@
             <artifactId>bilie-dao</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <version>2.5.1</version>
+        </dependency>
     </dependencies>
 
 
