--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>gulimail-product</module>
         <module>gulimail-ware</module>
         <module>gulimail-common</module>
+        <module>gulimail-gateway</module>
     </modules>
 
 </project>
