--- a/course/pom.xml
+++ b/course/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>eureka</module>
         <module>system</module>
+        <module>gateway</module>
     </modules>
     <properties>
         <java.version>1.8</java.version>
