--- a/course/system/pom.xml
+++ b/course/system/pom.xml
@@ -22,6 +22,18 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <!-- 集成mybatis -->
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <!--                <version>1.3.2</version>-->
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <!--                <version>5.1.37</version>-->
+        </dependency>
+
 
     </dependencies>
 
