--- a/course/system/src/main/resources/application.properties
+++ b/course/system/src/main/resources/application.properties
@@ -2,3 +2,9 @@ spring.application.name=system
 server.servlet.context-path=/system
 server.port=9001
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
+# ???????
+spring.datasource.url=jdbc:mysql://120.76.41.254:3306/courseimooc?characterEncoding=UTF&autoReconnect=true
+spring.datasource.username=courseimooc
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
