--- a/course/system/src/main/resources/application.properties
+++ b/course/system/src/main/resources/application.properties
@@ -11,3 +11,4 @@ spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 mybatis.mapper-locations=classpath:/mapper/*.xml
+logging.level.com.course.system.mapper=trace
