--- a/course/pom.xml
+++ b/course/pom.xml
@@ -58,6 +58,12 @@
                 <version>5.1.37</version>
             </dependency>
 
+
+            <dependency>
+                <groupId>com.course</groupId>
+                <artifactId>server</artifactId>
+                <version>0.0.1-SNAPSHOT</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
