--- a/course/system/src/main/resources/application.properties
+++ b/course/system/src/main/resources/application.properties
@@ -3,7 +3,6 @@ server.servlet.context-path=/system
 server.port=9001
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
-# ?????
 # characterEncoding=UTF&
 spring.datasource.url=jdbc:mysql://120.76.41.254:3306/courseimooc?autoReconnect=true
 spring.datasource.username=courseimooc
@@ -11,4 +10,4 @@ spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 mybatis.mapper-locations=classpath:/mapper/*.xml
-logging.level.com.course.system.mapper=trace
+#logging.level.com.course.system.mapper=trace
