--- a/course/pom.xml
+++ b/course/pom.xml
@@ -13,6 +13,7 @@
         <module>system</module>
         <module>gateway</module>
         <module>server</module>
+        <module>business</module>
     </modules>
     <properties>
         <java.version>1.8</java.version>
